--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "DM Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+}
+
+body.scroll-stop {
+  overflow: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1,
+h2,
+h4,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  /* dark theme variables */
+  --color-text-dark: #faf4e5;
+  --color-red-dark: #be123c;
+  --color-light-grey-dark: #d1d5db;
+  --color-text-light-dark: #4f5271;
+
+  --color-background-dark: hsl(235, 21%, 11%);
+
+  --color-light-greyish-blue-dark: hsl(234, 39%, 85%);
+  --color-light-greyish-blue-hover-dark: hsl(240, 2%, 52%);
 }
