--- a/src/components/Navbar/Searchbar/Searchbar.css
+++ b/src/components/Navbar/Searchbar/Searchbar.css
@@ -39,6 +39,10 @@
 
 @media (max-width: 968px) {
   .search-bar-container {
-    width: 250px;
+    width: 200px;
+  }
+
+  .search-bar-input {
+    font-size: 13px;
   }
 }
