--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,10 +16,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* display: gird;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: center;
-  align-items: center; */
   list-style-type: none;
   padding: 0;
   transition: height ease-in 0.5s;
@@ -75,8 +71,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 25px;
-  height: 25px;
+  border: 0px;
+  /* width: 25px;
+  height: 25px; */
 }
 
 .nav-bar-title {
@@ -86,10 +83,11 @@
 
 .nav-bar-shopping-cart-container {
   position: relative;
-  /* left: 10px; */
+  color: white;
   cursor: pointer;
   transform-origin: center;
   transition: box-shadow ease 0.2s;
+  padding: 13px;
 }
 
 .nav-bar-shopping-cart-container:hover {
