--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,21 +1,6 @@
-#cart-container {
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9);
-  position: absolute;
-  z-index: 9999;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  color: var(--color-text-dark);
-  top: 0;
-  padding: 150px 0px;
-}
-
-.cart {
+#cart {
   height: 40%;
   min-width: 50%;
-  /* padding: 10px 0px; */
 }
 
 .selected-movies-container {
