--- a/src/components/MovieImdb/MovieImdb.css
+++ b/src/components/MovieImdb/MovieImdb.css
@@ -1,10 +1,5 @@
-/* imdb */
-.imdb-number {
-  font-size: 15px;
-  margin-left: 10px;
-}
-
 .movie-imdb {
   display: flex;
   align-items: center;
+  gap: 0.5em;
 }
